--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,14 @@
-
-
 body {
     font-family: "Montserrat";
     text-align: center;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
 
     font-family: "Montserrat-Bold";
 }
@@ -21,7 +24,7 @@ p {
 }
 
 .colored-section {
-    background-color: #ff4c68;
+    background-color: #DB005B;
     color: #fff;
 }
 
@@ -120,6 +123,7 @@ p {
 
 #features span:hover {
     color: #ff4c68;
+    transform: scale(1.2);
 }
 
 
@@ -201,6 +205,24 @@ p {
 
 .social-btn {
     margin: 2% 0.5%;
+}
+
+
+/* Button to go to the top */
+.back-to-top-button {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #333;
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 5px;
+    opacity: 0.7;
+}
+
+.back-to-top-button:hover {
+    background-color: #555;
 }
 
 
